cluster/apps/networking/traefik/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_TARGET_SKY}"
    traefik.ingress.kubernetes.io/router.middlewares: networking-forwardauth-authelia@kubernetescrd
    hajimari.io/enable: "true"
    hajimari.io/icon: "web"
    hajimari.io/appName: "traefik"
spec:
  tls:
    - hosts:
        - "traefik.${SECRET_DOMAIN_ME}"
      secretName: "${SECRET_DOMAIN_ME/./-}-tls"
  rules:
    - host: "traefik.${SECRET_DOMAIN_ME}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
